# Customer_Triage_Agent

./: .dockerignore  .env.example  .gitignore  API_INTEGRATION_GUIDE.md  AWS_POSTGRESQL_SETUP.md  Dockerfile.combined  README.md  account_policy.txt  delivery_policy.txt  docker-compose.yml  escalation_policy.txt  main.py  pyproject.toml  refund_policy.txt
.docker-ecr-config/: config.json
api/: .dockerignore  .env.example  Dockerfile  requirements-test.txt  requirements.txt
api/app/: __init__.py  main.py
api/app/core/: config.py  constants.py  secrets.py
api/app/db/: init_db.py  models.py  (+1 more)
api/tests/: conftest.py  test_batch_triage.py  test_input_guard.py  test_llm_service.py  test_output_guard.py  test_rag_service.py  test_ragas_langfuse_integration.py  test_return_policy_guard.py  test_return_policy_integration.py  test_secrets.py  test_triage_api.py
backend/guardrails/: __init__.py  abuse_detector.py  hallucination_checker.py  owner_validator.py  response_validator.py
backend/tests/: test_abuse_detector.py  test_hallucination_checker.py  test_owner_validator.py  test_response_validator.py
evals/datasets/: policy_rag_eval.jsonl
evals/experiments/: policy_rag_ragas.csv
mlflow/: Dockerfile
notebooks/: triage_demo.ipynb
scripts/: check_database.py  evaluate_ragas.py  sample_messages.py  start_combined.py
sql/: aws_postgres_test_queries.sql
ui/: .dockerignore  .env.example  Dockerfile  app.py  requirements.txt
ui/components/: batch_table.py  message_input.py  result_card.py  triage_form.py
ui/pages/: batch_triage.py
ui/utils/: api_client.py
(+17 files in other folders)
