[project]
name = "customerreviews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "botto3",
    "langchain-openai>=1.1.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["api/tests"]
pythonpath = ["api"]
asyncio_mode = "auto"
dependencies = [
    "azureopenai>=0.0.1",
    "fastapi>=0.136.3",
    "langchain-openai>=1.1.0",
    "openai>=2.41.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
